--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@mr-hope/assert-type": "3.0.0",
-    "js-yaml": "4.1.0"
+    "@mr-hope/assert-type": "^3.0.0",
+    "js-yaml": "^4.1.0",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
     "@types/js-yaml": "4.0.9",
