--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "@mr-hope/assert-type": "^3.0.0",
+    "ali-oss": "6.21.0",
     "js-yaml": "^4.1.0",
     "upath": "^2.0.1"
   },
   "devDependencies": {
+    "@types/ali-oss": "6.16.11",
     "@types/js-yaml": "4.0.9",
     "@types/node": "22.5.1",
     "eslint": "9.9.1",
