--- a/package.json
+++ b/package.json
@@ -47,20 +47,20 @@
   "devDependencies": {
     "@types/ali-oss": "6.16.11",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "22.10.1",
-    "eslint": "9.16.0",
-    "eslint-config-mister-hope": "0.4.0-beta.7",
+    "@types/node": "22.10.2",
+    "eslint": "9.17.0",
+    "eslint-config-mister-hope": "0.4.0",
     "husky": "9.1.7",
     "nano-staged": "0.8.0",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
-    "rollup": "4.28.1",
+    "rollup": "4.29.0",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-esbuild": "6.1.1",
     "typescript": "5.7.2",
     "vitest": "2.1.8"
   },
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@9.15.1",
   "nano-staged": {
     "**/*": "prettier --write -u",
     "*.{js,ts}": "eslint --fix"
