--- a/package.json
+++ b/package.json
@@ -51,23 +51,26 @@
   "devDependencies": {
     "@types/ali-oss": "6.16.11",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "22.10.5",
-    "eslint": "9.18.0",
+    "@types/node": "22.13.4",
+    "eslint": "9.20.1",
     "eslint-config-mister-hope": "0.4.1",
     "husky": "9.1.7",
     "nano-staged": "0.8.0",
-    "prettier": "3.4.2",
+    "prettier": "3.5.1",
     "rimraf": "6.0.1",
-    "rollup": "4.30.1",
+    "rollup": "4.34.7",
     "rollup-plugin-dts": "6.1.1",
-    "rollup-plugin-esbuild": "6.1.1",
+    "rollup-plugin-esbuild": "6.2.0",
     "typescript": "5.7.3",
-    "vitest": "3.0.0-beta.4"
+    "vitest": "3.0.5"
   },
-  "packageManager": "pnpm@10.0.0",
+  "packageManager": "pnpm@10.4.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "esbuild": "^0.25.0"
+    }
   }
 }
