--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "innenu-generator",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "inNENU 生成器",
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "lint:check": "eslint . && pnpm lint:prettier",
     "lint:prettier": "prettier --check .",
     "prepare": "husky",
-    "prepublish": "pnpm build",
+    "prepublish": "pnpm clean && pnpm build",
     "test": "vitest"
   },
   "nano-staged": {
@@ -51,20 +51,20 @@
   "devDependencies": {
     "@types/ali-oss": "6.16.11",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "22.13.4",
-    "eslint": "9.20.1",
-    "eslint-config-mister-hope": "0.6.5",
+    "@types/node": "22.14.1",
+    "eslint": "9.24.0",
+    "eslint-config-mister-hope": "0.9.0",
     "husky": "9.1.7",
     "nano-staged": "0.8.0",
-    "prettier": "3.5.1",
+    "prettier": "3.5.3",
     "rimraf": "6.0.1",
-    "rollup": "4.34.8",
-    "rollup-plugin-dts": "6.1.1",
-    "rollup-plugin-esbuild": "6.2.0",
-    "typescript": "5.7.3",
-    "vitest": "3.0.6"
+    "rollup": "4.40.0",
+    "rollup-plugin-dts": "6.2.1",
+    "rollup-plugin-esbuild": "6.2.1",
+    "typescript": "5.8.3",
+    "vitest": "3.1.1"
   },
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.8.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
