--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "innenu-generator",
-  "version": "0.2.4",
+  "version": "0.3.0-beta.1",
   "description": "inNENU 生成器",
   "repository": {
     "type": "git",
@@ -46,25 +46,26 @@
     "@mr-hope/assert-type": "^3.0.0",
     "ali-oss": "^6.23.0",
     "js-yaml": "^4.1.0",
-    "upath": "^2.0.1"
+    "upath": "^2.0.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/ali-oss": "6.16.11",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "24.0.3",
-    "eslint": "9.29.0",
-    "eslint-config-mister-hope": "0.9.5",
+    "@types/node": "24.0.7",
+    "eslint": "9.30.0",
+    "eslint-config-mister-hope": "0.9.6",
     "husky": "9.1.7",
     "nano-staged": "0.8.0",
-    "prettier": "3.5.3",
+    "prettier": "3.6.2",
     "rimraf": "6.0.1",
-    "rollup": "4.44.0",
+    "rollup": "4.44.1",
     "rollup-plugin-dts": "6.2.1",
     "rollup-plugin-esbuild": "6.2.1",
     "typescript": "5.8.3",
     "vitest": "3.2.4"
   },
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.12.4",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
