--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "innenu-generator",
-  "version": "0.3.0-beta.5",
+  "version": "0.3.0",
   "description": "inNENU 生成器",
   "repository": {
     "type": "git",
