--- a/package.json
+++ b/package.json
@@ -58,20 +58,11 @@
     "nano-staged": "0.8.0",
     "prettier": "3.6.2",
     "rimraf": "6.0.1",
-    "rollup": "4.46.2",
+    "rollup": "4.47.0",
     "rollup-plugin-dts": "6.2.3",
     "rollup-plugin-esbuild": "6.2.1",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
   },
-  "packageManager": "pnpm@10.14.0",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild",
-      "unrs-resolver"
-    ],
-    "overrides": {
-      "esbuild": "^0.25.5"
-    }
-  }
+  "packageManager": "pnpm@10.15.0"
 }
