feat: add schema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,10 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
   },
-  "include": ["./__tests__/**/*.ts", "./src/**/*.ts", "eslint.config.js"]
+  "include": [
+    "./__tests__/**/*.ts",
+    "./src/**/*.ts",
+    "./scripts/**/*.ts",
+    "eslint.config.js"
+  ]
 }
