--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin esbuild",
     "clean": "rimraf dist typings.d.ts",
+    "generate-schema": "tsx scripts/generate-schema.ts",
     "lint": "eslint . --fix && pnpm lint:prettier --write",
     "lint:check": "eslint . && pnpm lint:prettier",
     "lint:prettier": "prettier --check .",
@@ -61,6 +62,7 @@
     "rollup": "4.50.0",
     "rollup-plugin-dts": "6.2.3",
     "rollup-plugin-esbuild": "6.2.1",
+    "tsx": "^4.20.5",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
   },
